Player jumping fix

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -8,16 +8,13 @@
         padding-top: (9 / 16) * 100%;
     }
 
-    >.video-content {
+    >.plyr {
+        margin: 0;
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         background-color: black;
-
-        .plyr{
-            margin: 0;
-        }
     }
 }
